# chris-ant

./: CHANGELOG.md  LICENSE  README.md  chris-ant.cabal
input/: example0.txt  example1.txt  example2.txt  example3.txt
src/: Example.hs  Lib.hs  Naive.hs  ParseInput.hs
src-benchmark/: Main.hs
src-exe/: Main.hs
src-test/: Main.hs
